Issue: The logo should be invisible at any time. This issue was successfully resolved by removing the opacity setting of 0 to 1 within the keyframe of the logo animation. This was resolved in 1 minute.

--- a/styles/_mobile-display.scss
+++ b/styles/_mobile-display.scss
@@ -44,11 +44,9 @@
 
                 @keyframes fadeInLogo {
                     from {
-                        opacity: 0;
                         transform: rotate(90deg);
                     }
                     to {
-                        opacity: 1;
                         transform: rotate(0);
                     }
                 }
@@ -71,10 +69,6 @@
                     &:checked ~ .mobile-footer {
                         left: 0;
                         transition: 0.4s ease-in-out;
-
-                        .menu-link {
-                            animation: fadeInMenu 1.6s ease-in-out forwards;
-                        }
                     }
 
                     @keyframes fadeInMenu {
