--- a/styles/style.css
+++ b/styles/style.css
@@ -94,11 +94,9 @@ h4 {
   }
   @keyframes fadeInLogo {
     from {
-      opacity: 0;
       transform: rotate(90deg);
     }
     to {
-      opacity: 1;
       transform: rotate(0);
     }
   }
@@ -118,9 +116,6 @@ h4 {
   .container header .nav-section #menu-toggle:checked ~ .mobile-footer {
     left: 0;
     transition: 0.4s ease-in-out;
-  }
-  .container header .nav-section #menu-toggle:checked ~ .mobile-footer .menu-link {
-    animation: fadeInMenu 1.6s ease-in-out forwards;
   }
   @keyframes fadeInMenu {
     from {
